--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,7 +15,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.xing.canvas.demo.SplashView
+    <com.xing.自定义view.canvas.demo.SplashView
         android:id="@+id/splash"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
