--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -8,4 +8,15 @@
         <attr name="bubble_textColor" format="color" />
     </declare-styleable>
 
+    <declare-styleable name="PercentLayout">
+
+        <attr name="percent_width" format="float" />
+        <attr name="percent_height" format="float" />
+        <attr name="percentMarginLeft" format="float" />
+        <attr name="percentMarginRight" format="float" />
+        <attr name="percentMarginTop" format="float" />
+        <attr name="percentMarginBottom" format="float" />
+
+    </declare-styleable>
+
 </resources>
